<resources>
    <string name="app_name">LocationProject</string>
    <string name="action_settings">Settings</string>
    <string name="activity_weather_wind_speed_label">Wind speed</string>
    <string name="activity_weather_wind_direction_label">Wind direction</string>
    <string name="activity_weather_cloudiness_label">Cloudiness</string>
    <string name="activity_weather_pressure_label">Pressure</string>
    <string name="activity_weather_humidity_label">Humidity</string>
    <string name="activity_weather_sunrise_label">Sunrise</string>
    <string name="activity_weather_sunset_label">Sunset</string>
    <string name="activity_weather_coordinates_label">Geographic coordinates</string>
</resources>
