<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devacademy.tarbandrei.locationproject.activities.WeatherActivity">

    <RelativeLayout
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/activity_weather_name_text_view"
            style="@style/WeatherActivityStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_weather_country_text_view"
            style="@style/WeatherActivityStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/activity_weather_name_text_view" />

        <TextView
            android:id="@+id/activity_weather_temperature_text_view"
            style="@style/WeatherActivityStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_weather_name_text_view" />

        <TextView
            android:id="@+id/activity_weather_main_text_view"
            style="@style/WeatherActivityStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/activity_weather_temperature_text_view"
            android:layout_toRightOf="@id/activity_weather_temperature_text_view" />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_weather_wind_speed_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/a"
        android:text="@string/activity_weather_wind_speed_label" />

    <TextView
        android:id="@+id/activity_weather_wind_direction_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_wind_speed_label_text_view"
        android:text="@string/activity_weather_wind_direction_label" />

    <TextView
        android:id="@+id/activity_weather_cloudiness_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_wind_direction_label_text_view"
        android:text="@string/activity_weather_cloudiness_label" />

    <TextView
        android:id="@+id/activity_weather_pressure_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_cloudiness_label_text_view"
        android:text="@string/activity_weather_pressure_label" />

    <TextView
        android:id="@+id/activity_weather_humidity_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_pressure_label_text_view"
        android:text="@string/activity_weather_humidity_label" />

    <TextView
        android:id="@+id/activity_weather_sunrise_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_humidity_label_text_view"
        android:text="@string/activity_weather_sunrise_label" />

    <TextView
        android:id="@+id/activity_weather_sunset_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_sunrise_label_text_view"
        android:text="@string/activity_weather_sunset_label" />

    <TextView
        android:id="@+id/activity_weather_coordinate_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_weather_sunset_label_text_view"
        android:paddingRight="10dp"
        android:text="@string/activity_weather_coordinates_label" />

    <TextView
        android:id="@+id/activity_weather_wind_speed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_wind_speed_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_wind_deg_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_wind_direction_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_cloudiness_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_pressure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_pressure_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_humidity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_humidity_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_sunrise_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_sunrise_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_sunset_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_sunset_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view" />

    <TextView
        android:id="@+id/activity_weather_coordinate_longitude_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_coordinate_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_label_text_view"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/activity_weather_coordinate_latitude_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_weather_coordinate_label_text_view"
        android:layout_toRightOf="@id/activity_weather_coordinate_longitude_text_view" />
</RelativeLayout>
